--- a/js/fancybox/jquery.fancybox.css
+++ b/js/fancybox/jquery.fancybox.css
@@ -35,7 +35,7 @@
 }
 
 .fancybox-opened {
-	z-index: 8030;
+	z-index: 9999999;
 }
 
 .fancybox-opened .fancybox-skin {
